--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,23 @@
+[project]
+authors = [
+    { name="Claudio Klingler", email="ck@realtime-projects.com"}
+]
+readme = "README.md"
+requires-python = ">=3.7"
+
+classifiers = [
+    "Programming Language :: Python :: 3",
+    "License :: OSI Approved :: MIT License",
+    "Operating System :: OS Independent",
+]
+
 [build-system]
 requires = [
   "setuptools >= 40.9.0",
   "wheel",
 ]
 build-backend = "setuptools.build_meta"
+
+[project.urls]
+"Homepage" = "https://github.com/acre-bdd/DevOpsAPI"
+"Bug Tracker" = "https://github.com/acre-bdd/DevOpsAPI/issues"
