--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,4 +1,7 @@
 [project]
+name = "DevOpsAPI"
+version = "0.1.0"
+description="A simple object-oriented python interface to the DevOps REST API"
 authors = [
     { name="Claudio Klingler", email="ck@realtime-projects.com"}
 ]
