--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,9 @@
 packages = find:
 # packagae_data = var/**/*
 include_package_data = True
-install_requires = lxml
+install_requires = 
+    lxml
+    requests
 
 [wheel]
 universal=1
