--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "DevOpsAPI"
-version = "0.1.1"
+version = "0.2.0a1"
 description="A simple object-oriented python interface to the DevOps REST API"
 authors = [
     { name="Claudio Klingler", email="ck@realtime-projects.com"}
